--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,16 @@
+:root {
+  --primary: #0C3C26;
+  --secondary: #35605A;
+  --tertiary: #6B818C;
+  --background: #D8E4FF;
+  --highlight: #31E981;
+}
+
 .App {
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .App-logo {
@@ -35,4 +46,20 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.article-preview {
+  background-color: white;
+  box-shadow: 5px 5px 10px;
+  color: var(--secondary);
+  border: 1px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 400px;
+  margin: 20px;
+  padding: 20px;
+  border-radius: 50px;
+  cursor: pointer;
 }
