--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,24 @@
   --highlight: #31E981;
 }
 
+h1 {
+  color: var(--primary);
+}
+
+nav {
+  width: 100%;
+  height: 55px;
+  background-color: var(--primary);
+  display: flex;
+  justify-content: space-evenly;  
+  align-items: center;
+}
+
+nav > a {
+  font-size: 20px;
+  color: white;
+}
+
 .App {
   text-align: center;
   display: flex;
